--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             
             <button id="addMessage">Add to JSONL</button>
 
+             <h2>Batch actions</h2>
+
             <label for="jsonFileInput" id="jsonFileLabel">Upload JSON Files (Optional)</label>
             <input type="file" id="jsonFileInput" accept=".json" class="file-input" multiple>
             <div id="jsonFileStatus" class="file-status"></div>
