--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
              <br><br>
              <h2>Batch actions</h2>
-
+             <p>Each JSON file title will be used as content, while each files content is used as value</p>
             <label for="jsonFileInput" id="jsonFileLabel">Upload JSON Files (Optional)</label>
             <input type="file" id="jsonFileInput" accept=".json" class="file-input" multiple>
             <div id="jsonFileStatus" class="file-status"></div>
